@@ -1,3 +1,8 @@
+2001-01-06  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
+	* configure.in, various Makefile.am: added quick'n'dirty ucxt makefile,
+	not yet included in main build (like ucc)
+	* usecode/ucxt/.cvsignore, usecode/ucxt/src/.cvsignore: add linux files
+
 2001-01-05  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* exult.cc: ugly temporary hack to fix compiler error.
 	* ready.h, actors.h: removed warnings
